<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context=".MainActivity"
    android:background="@drawable/appback">
    <TextView
        android:id="@+id/txtt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Speaking And Listening Assistant"
        android:textColor="#fff"
        android:gravity="center"
        android:background="#1c2955"
        android:elevation="5dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_below="@+id/txtt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnSpeak"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="getSpeechInput"
                android:src="@drawable/ic_mic"
                android:layout_gravity="center"
                android:elevation="5dp"/>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txvResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="#000"
                    android:textSize="26sp"
                    android:textStyle="normal"
                    android:hint="Listening..."
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="বাংলা"
                    android:gravity="center"
                    android:elevation="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pitch"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

                <SeekBar
                    android:id="@+id/seek_bar_pitch"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:progress="50"
                    android:layout_gravity="center"
                    android:elevation="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speed"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

                <SeekBar
                    android:id="@+id/seek_bar_speed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:progress="50"
                    android:layout_gravity="center"
                    android:elevation="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:background="@drawable/btnback">

                <Button
                    android:id="@+id/button_speak"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:enabled="false"
                    android:text="Say it!"
                    android:elevation="5dp"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:background="#00ffffff"
                  />
                    <ImageView
                        android:id="@+id/sayimg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/sayit"
                        />

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:background="#7cffffff"
                    android:elevation="5dp">
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rx"
                        android:textStyle="bold" />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_buffer"
                        android:id="@+id/readBuffer"
                        android:layout_marginLeft="50dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#7cffffff"
                    android:elevation="5dp">
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/status"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textStyle="bold" />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"

                        android:text="@string/bluetooth_status"
                        android:id="@+id/bluetoothStatus"
                        android:ellipsize="end"
                        android:maxLines="1"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btnback">
                <Button
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/bluetooth_on"
                    android:id="@+id/scan"
                    android:elevation="5dp"
                    android:background="#00ffffff"
                    />
                    <ImageView
                        android:id="@+id/onimg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/turnon"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btnback">

                <Button
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/bluetooth_off"
                    android:id="@+id/off"
                    android:elevation="5dp"
                    android:background="#00ffffff"
                    />
                    <ImageView
                        android:id="@+id/offimg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/turnoff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btnback">
                <Button
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/show_paired_devices"
                    android:elevation="5dp"
                    android:id="@+id/PairedBtn"
                    android:background="#00ffffff"
                    />

                    <ImageView
                        android:id="@+id/showimg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/showpaired"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btnback">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:elevation="5dp"
                    android:padding="5dp"
                    android:text="@string/discover_new_devices"
                    android:id="@+id/discover"
                    android:background="#00ffffff"
                    />

                    <ImageView
                        android:id="@+id/searchimg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/discovernew"/>

                </LinearLayout>



                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/devicesListView"
                    android:choiceMode="singleChoice"
                    />


            </LinearLayout>




        </LinearLayout>
    </ScrollView>





</RelativeLayout>

